fixed box shadow on safari

--- a/src/styles/Calculator/Key.scss
+++ b/src/styles/Calculator/Key.scss
@@ -25,7 +25,10 @@ $transition-opacity-filter: 0.1s;
   &::before {
     content: '';
     position: absolute;
-    inset: 0 0 0 0;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
     border-radius: 10px;
     box-shadow: 0 4px 0;
     transition: opacity $transition, filter $transition-opacity-filter,
